--- a/iEasyReminder/iEasyReminder/iEasyReminder/Base.lproj/Main.storyboard
+++ b/iEasyReminder/iEasyReminder/iEasyReminder/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -18,7 +18,7 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Locate" id="bXG-qN-T41"/>
+                    <navigationItem key="navigationItem" title="Context" id="bXG-qN-T41"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qh2-T1-AhA" sceneMemberID="firstResponder"/>
             </objects>
@@ -94,11 +94,11 @@
             </objects>
             <point key="canvasLocation" x="-208" y="-183"/>
         </scene>
-        <!--Navigation Controller - Locate-->
+        <!--Navigation Controller - Context-->
         <scene sceneID="yxe-EX-SOM">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YH0-9p-dnY" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Locate" image="first" id="u1e-5L-l1D"/>
+                    <tabBarItem key="tabBarItem" title="Context" image="first" id="u1e-5L-l1D"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="5bc-8q-uF4">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
