--- a/iEasyReminder/iEasyReminder/iEasyReminder/Base.lproj/Main.storyboard
+++ b/iEasyReminder/iEasyReminder/iEasyReminder/Base.lproj/Main.storyboard
@@ -73,15 +73,16 @@
                                 <color key="backgroundColor" red="0.3898147897" green="0.84715740470000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="335" id="B48-jC-77Q"/>
-                                    <constraint firstAttribute="width" constant="320" id="dgk-bR-fBQ"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="dgk-bR-fBQ"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="mQx-My-FDJ" firstAttribute="top" secondItem="RBx-Ws-Wnb" secondAttribute="top" constant="65" id="4vt-vp-uuw"/>
+                            <constraint firstAttribute="centerX" secondItem="mQx-My-FDJ" secondAttribute="centerX" id="9dc-Jx-ff7"/>
                             <constraint firstAttribute="bottom" secondItem="adv-HO-Bl7" secondAttribute="bottom" constant="50" id="Dro-52-X4s"/>
-                            <constraint firstItem="adv-HO-Bl7" firstAttribute="leading" secondItem="RBx-Ws-Wnb" secondAttribute="leading" constant="141" id="qgq-iG-Pfc"/>
+                            <constraint firstAttribute="centerX" secondItem="adv-HO-Bl7" secondAttribute="centerX" id="TI7-el-aHK"/>
                             <constraint firstItem="mQx-My-FDJ" firstAttribute="leading" secondItem="RBx-Ws-Wnb" secondAttribute="leading" id="wMc-uX-W7T"/>
                             <constraint firstItem="adv-HO-Bl7" firstAttribute="top" secondItem="mQx-My-FDJ" secondAttribute="bottom" id="xL5-ej-j8q"/>
                         </constraints>
